changed design to one window to clean up code

--- a/index.html
+++ b/index.html
@@ -27,38 +27,18 @@
             </h2>
 
             <content>
-                <div class='calculator-boxes'>
+                <div class='calculator-boxes'>Start with this
 
-                    <input id='add-input-1' type="number">
-                    +
-                    <input id='add-input-2' type='number'>
-                    <button id='add-button'>ADD IT UP!</button>
-                    <div id='add-sum'></div>
-                </div>
-                <div class='calculator-boxes'>
+                    <input id='all-input-1' type="number">And do something to this
 
-                    <input id='sub-input-1' type="number">
-                    -
-                    <input id='sub-input-2' type="number">
-                    <button id='subtract-button'>SUBTRACT IT!</button>
-                    <div id='subtract-sum'></div>
-                </div>
-                <div class='calculator-boxes'>
-
-                    <input id='multiply-input-1' type='number'>
-                    *
-                    <input id='multiply-input-2' type='number'>
-                    <button id='multiply-button'>MULTIPLY IT!</button>
-                    <div id='multiply-sum'></div>
-
-                </div>
-                <div class='calculator-boxes'>
-
-                    <input id='divide-input-1' type='number'>
-                    /
-                    <input id='divide-input-2' type='number'>
-                    <button id='divide-button'>DIVIDE IT!</button>
-                    <div id='divide-sum'></div>
+                    <input id='all-input-2' type='number'>
+                    <div class='buttons'>
+                        <button id='add-button'>+</button>
+                        <button id='subtract-button'>-</button>
+                        <button id='multiply-button'>*</button>
+                        <button id='divide-button'>/</button>
+                    </div>
+                    <div id='calculator-window'></div>
                 </div>
 
 
